CSDEV/objects/HAE_Category__c.object
<CustomObject>
    <description>HAE: Custom object to create categories.</description>
    <fields>
        <fullName>HAE_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>HAE: Determines if record is active or not</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HAE_Category_Name__c</fullName>
        <description>HAE: Name of the category record</description>
        <label>Category Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Description__c</fullName>
        <description>HAE: Description of the category record</description>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HAE_Priority_Automation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>HAE: Determines the priority automation of a record</description>
        <label>Priority Automation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HAE_Region__c</fullName>
        <description>HAE: Region of the category record</description>
        <label>Region</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                    <default>true</default>
                    <label>NA</label>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>ANZ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Category</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Category ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Categories</pluralLabel>
    <recordTypes>
        <fullName>HAE_Customer_Services_Claim</fullName>
        <active>true</active>
        <description>HAE: Claim type Customer Service</description>
        <label>Customer Services: Claim</label>
    </recordTypes>
    <recordTypes>
        <fullName>HAE_Customer_Services_Contract_Request</fullName>
        <active>true</active>
        <description>HAE: Contract Request type Customer Service</description>
        <label>Customer Services: Contract Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>HAE_Customer_Services_Device</fullName>
        <active>true</active>
        <description>HAE Customer Services: Device type</description>
        <label>Customer Services: Device</label>
    </recordTypes>
    <recordTypes>
        <fullName>HAE_Customer_Services_Disposable</fullName>
        <active>true</active>
        <description>HAE Customer Services: Disposable type</description>
        <label>Customer Services: Disposable</label>
    </recordTypes>
    <recordTypes>
        <fullName>HAE_Customer_Services_GHX</fullName>
        <active>true</active>
        <description>HAE: GHX type Customer Service</description>
        <label>Customer Services: GHX</label>
    </recordTypes>
    <recordTypes>
        <fullName>HAE_Customer_Services_Inquiry</fullName>
        <active>true</active>
        <description>HAE: Inquiry type Customer Service</description>
        <label>Customer Services: Inquiry</label>
    </recordTypes>
    <recordTypes>
        <fullName>HAE_Customer_Services_Order</fullName>
        <active>true</active>
        <description>HAE: Order type Customer Service</description>
        <label>Customer Services: Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>HAE_Customer_Services_Service_Request</fullName>
        <active>true</active>
        <description>HAE: Service Request type Customer Service</description>
        <label>Customer Services: Service Request</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>